fixing image stretching

--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,7 @@
 
 body {
     background-color: rgb(245, 238, 228);
-    padding: 30px;
-    
+    padding: 30px;  
     font-family: 'Quicksand', sans-serif;
     max-width: 1000px;
     margin: auto;
@@ -31,7 +30,7 @@ body {
         font-size: 0.8rem;
     }
     .picture{
-        
+        width: auto;
         text-align: center;
 
     }
